# ystdlib-cpp

./: .gersemirc  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  lint-requirements.txt  taskfile.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yaml  feature-request.yaml
.github/workflows/: code-linting-checks.yaml  unit-tests.yaml
CMake/: ystdlib-config.cmake.in  ystdlib-cpp-config.cmake.in  ystdlib-cpp-helpers.cmake  ystdlib-helpers.cmake
cmake/: ystdlib-config.cmake.in  ystdlib-helpers.cmake
cmake/libs/: containers-config.cmake.in  error_handling-config.cmake.in  io_interface-config.cmake.in  wrapped_facade_headers-config.cmake.in
cmake/ystdlib/libs/: containers-config.cmake.in  error_handling-config.cmake.in  io_interface-config.cmake.in  wrapped_facade_headers-config.cmake.in
examples/: CMakeLists.txt  Makefile  README.md  constants.hpp  main.cpp  types.hpp
examples/src/: linking-tests.cpp
src/: .clang-format  main.cpp
src/ystdlib/: .gersemirc  CMakeLists.txt  hello.cpp
src/ystdlib/array/: Array.hpp  CMakeLists.txt
src/ystdlib/container/: Array.hpp  CMakeLists.txt
src/ystdlib/container/test/: test_Array.cpp
src/ystdlib/containers/: Array.hpp  CMakeLists.txt
src/ystdlib/containers/test/: test_Array.cpp
src/ystdlib/error_handling/: CMakeLists.txt  ErrorCode.hpp  Result.hpp  SourceLocation.hpp  TraceableException.hpp  test-Defs.cpp  test-Defs.hpp  test-ErrorCode.cpp  test-TraceableException.cpp  test-types.cpp  types.hpp  utils.hpp
src/ystdlib/error_handling/test/: constants.hpp  test_ErrorCode.cpp  test_Result.cpp  test_TraceableException.cpp  test_error_code.cpp  types.cpp  types.hpp
src/ystdlib/hello/: CMakeLists.txt  hello.hpp
src/ystdlib/io_interface/: CMakeLists.txt  ErrorCode.cpp  ErrorCode.hpp  ReaderInterface.cpp  ReaderInterface.hpp  StreamInterface.hpp  WriterInterface.cpp  WriterInterface.hpp
src/ystdlib/testlib/: CMakeLists.txt  hello.hpp  math.hpp  test-hello.cpp
src/ystdlib/wrapped_facade_headers/: CMakeLists.txt
src/ystdlib/wrapped_facade_headers/bits/types/: clock_t.h  clockid_t.h  time_t.h
src/ystdlib/wrapped_facade_headers/sys/: types.h
src/ystdlib/wrapped_facade_headers/test/: test_bits_types_clock_t.cpp  test_bits_types_clockid_t.cpp  test_bits_types_time_t.cpp  test_off_t.cpp  test_ssize_t.cpp  test_sys_types.cpp
taskfiles/: build.yaml  deps.yaml  examples.yaml  lint-cmake.yaml  lint-cpp.yaml  lint-sh.yaml  lint-venv.yaml  lint-yaml.yaml  lint.yaml  test.yaml  utils.yaml  ystdlib.yaml
tasks/: lint-tasks.yaml  lint-yaml-tasks.yaml
tests/: test-Array.cpp
tools/scripts/: install-gcc-10.sh
tools/scripts/lib_install/centos/: install-all.sh
tools/scripts/lib_install/centos-stream-9/: centos-script.sh
tools/scripts/lib_install/linux/: install-all.sh  linux-script.sh
tools/scripts/lib_install/linux/ubuntu-focal/: install-prebuilt-packages.sh
tools/scripts/lib_install/macos/: install-all.sh  macos-script.sh
ystdlib/error_handling/: CMakeLists.txt  ErrorCode.hpp
